# BaytAlSudani

./: .env.example  .replit  DATABASE_SETUP.md  README.md  README_API.md  app.py  main.py  package-lock.json  package.json  pyproject.toml  replit.md
admin/: login_admin.php  logout.php  manage_users.php
api/: PWA_GUIDE.md  README.md  __init__.py  auth_utils.py  create_announcement.py  create_job.py  create_product.py  create_service.py  create_store.py  database_structure.sql  db_config.py  get_announcements.py  get_jobs.py  get_product_by_id.py  get_products.py  get_services.py  get_store_by_id.py  get_stores.py  get_users.php  login.php  login.py  main_server.py  register.php  register.py  stores.php  test_api.py
api/admin/: dashboard.php
api/announcements/: list.php
api/api/: README.md  create_announcement.py  create_job.py  create_store.py  db_config.py  get_jobs.py  get_product_by_id.py  get_stores.py  login.py  main_server.py  test_api.py
api/attached_assets/: Pasted--Task-Improve-the-Frontend-React-TailwindCSS-of-the-Bayt-AlSudani-project-to-address-UI-UX-1752392415133_1752392415134.txt  Pasted-I-m-building-a-professional-marketplace-application-called-Bayt-AlSudani-that-includes-A-mob-1752134063750_1752134063750.txt
api/config/: cors.php  db.php
api/mobile_app/: app.json  package.json
api/php-dashboard/: README.md
api/products/: create.php
api/server/: db.ts  index.ts  storage.ts
client/: index.html
mobile/: App.tsx
mobile_app/: App.tsx  README.md
server/: db-sqlite.ts  index.ts  replitAuth.ts  routes.ts  storage.ts
shared/: schema.ts
(+83 files in other folders)
